fixing layout issues in the user profile page

--- a/app/stylesheets/content/_show_user.sass
+++ b/app/stylesheets/content/_show_user.sass
@@ -2,13 +2,16 @@
 
 =show_user
   .header    
+    width: 100%
     display: block
     float: left
     img
+      height: 100px
+      width: 100px
       float: left
       margin-right: 10px
     h2
-      width: 90%
+      width: 88%
       font-family: Myriad
       float: left
       color: #999
@@ -28,13 +31,14 @@
     +idea
     .idea
       width: 458px
-      height: 130px
+      height: 110px
       .idea_wrapper
         width: auto
-        height: 80px
+        height: 60px
         h1
           font-size: 20px
     h3
       font-family: Myriad
       font-size: 1.4em
-    
+    li
+      margin-top: 10px
